<resources>
    <string name="app_name">Pinterest Firebase</string>
    <string name="cancelar">CANCELAR</string>
    <string name="sin_cuenta_registrar">¿No tienes una cuenta? Regístrate aquí</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="crear_nueva_cuenta">Crear Nueva Cuenta</string>
    <string name="contraseña">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="crea_la_vida_que_deseas_en_pinterest">Crea la vida que deseas en Pinterest</string>
    <string name="p_vender">Publicar un producto que quieres vender</string>
    <string name="p_normal">Publicar una imagen para que todos la puedan ver</string>
    <string name="ir_perfil">Ir al Perfil</string>
    <string name="agregar_descripcion">Agregar descripcion</string>
    <string name="agregar_nombre">Agregar nombre</string>
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="publicaciones">Mis Publicaciones</string>
    <string name="volver">Volver</string>
    <string name="agregar">Agregar</string>
    <string name="publicar">Publicar</string>
    <string name="nombre_de_la_publicacion">Nombre de la publicacion</string>
    <string name="descripcion">Descripcion</string>
    <string name="nombre">Nombre</string>
    <string name="Nombre_Usuario">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="editar_publicacion_normal">Editar publicacion normal</string>
    <string name="eliminar_publicacion_normal">Eliminar publicacion normal</string>
    <string name="agregar_publicaciones">Agregar Publicaciones</string>
    <string name="subir">Subir</string>
    <string name="perfil">Perfil</string>
    <string name="editar">Editar</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="imagen_seleccionada">Imagen seleccionada</string>
    <string name="Ingresa_nombre">Nombre</string>
    <string name="verificar_contrase_a">Verificar contraseña</string>
    <string name="apellidos">Apellidos</string>
    <string name="registro">Registro</string>
    <string name="ingresa_correo">Ingresa Correo</string>
    <string name="tus_publicaciones">Tus publicaciones</string>
    <string name="back">Back</string>
    <string name="nombres">Nombres</string>
    <string name="ingresa_tu_correo">Ingresa tu correo</string>
    <string name="email">Email</string>
    <string name="editar_imagen">Editar imagen</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="s_00">s/00</string>
    <string name="a_adir_imagen_secundaria_3">Añadir imagen secundaria 3</string>
    <string name="a_adir_imagen_secundaria_2">Añadir imagen secundaria 2</string>
    <string name="a_adir_imagen_secundaria_1">Añadir imagen secundaria 1</string>
    <string name="a_adir_imagen_principal">Añadir imagen principal</string>
    <string name="agregar_categoria">Agregar categoria</string>
    <string name="agregar_detalle">Agregar detalle</string>
    <string name="agregar_stock">Agregar Stock</string>
    <string name="agregar_precio">Agregar Precio</string>
    <string name="agregar_nombre_producto">Agregar nombre producto</string>
    <string name="agregar_un_producto">Agregar un producto</string>
    <string name="bot_n_de_retroceso">Botón de retroceso</string>
    <string name="comercio">Comercio</string>
    <string name="lista_de_productos_disponibles">Lista de productos disponibles</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="precio_s">Precio: S/</string>
    <string name="_00_00">00.00</string>
    <string name="stock">Stock:</string>
    <string name="_0">0</string>
    <string name="detalles">Detalles:</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="comprar">Comprar</string>
    <string name="card_productos">Card productos</string>
    <string name="imagen_de_inicio">Imagen de inicio</string>
    <string name="imagen_uno">Imagen uno</string>
    <string name="continuar">Continuar</string>
    <string name="reciclar_texto">Reciclar transforma los residuos en nuevos recursos, evitando la acumulación de basura y el desperdicio de materiales. Separar correctamente los desechos es un pequeño gesto que genera un gran impacto en el cuidado del planeta</string>
    <string name="reutilizar_texto">Reutilizar objetos en lugar de desecharlos es una forma efectiva de reducir la contaminación. Dar una segunda vida a lo que ya tenemos ayuda a construir un futuro más sostenible para todos.</string>
    <string name="cuidar_texto">Cuidar el medio ambiente es responsabilidad de todos. Reducir, reutilizar y reciclar son acciones simples que ayudan a preservar nuestro planeta para las futuras generaciones.</string>
    <string name="card_publicaciones">Card publicaciones</string>
    <string name="imagen_detalle">Imagen de la publicación</string>
    <string name="nombre_publicacion">Nombre de la publicación</string>
    <string name="descripcion_publicacion">Descripción de la publicación</string>
</resources>