<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.perfil.ProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="35dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Foto perfil -->
    <TextView
        android:id="@+id/tv_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/perfil"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#9E9E9E"
        android:background="@drawable/circle_background1"
        app:layout_constraintTop_toBottomOf="@id/tv_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Botón editar -->
    <Button
        android:id="@+id/btn_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:backgroundTint="#555555"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_new_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campos -->

    <Button
        android:id="@+id/btn_new_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#555555"
        android:text="@string/seleccionar_imagen"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="118dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="144dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:background="@drawable/campos"
        android:text="@string/ingresa_correo"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        app:layout_constraintTop_toBottomOf="@id/btn_editar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>


    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/campos"
        android:hint="@string/nombre"
        android:text="@string/nombre"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@id/et_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <EditText
        android:id="@+id/et_apellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/campos"
        android:hint="@string/apellidos"
        android:text="@string/apellidos"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@id/et_nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/et_nombre"
        app:layout_constraintTop_toBottomOf="@id/et_nombre" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_apellido">

        <Button
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/RedButtons"
            android:text="@string/tus_publicaciones"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/back"
        app:menu="@menu/menu"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>